Fix remaining issues
Fix mobile chat misplacements, messages and accessibility not showing in book and quiz

--- a/scss/moove/_accessibilitybar.scss
+++ b/scss/moove/_accessibilitybar.scss
@@ -82,7 +82,4 @@ body.hasaccessibilitybar {
         height: calc(100% - #{$navbar-height} - 80px);
     }
 
-    .message-app .footer-container {
-        top: -30px;
-    }
 }
